--- a/bims/templates/site_visit/site_visit_list.html
+++ b/bims/templates/site_visit/site_visit_list.html
@@ -16,30 +16,52 @@
         .btn-sm {
             font-size: 10pt !important;
         }
+
         .pagination-centered {
             text-align: center;
         }
+
         ul.pagination {
             display: flex;
             align-items: center;
             list-style: none;
         }
+
         ul.pagination li {
             display: inline-block;
             margin-left: 1rem;
         }
+
         ul.pagination li.arrow {
             font-size: 2rem;
         }
+
         ul.pagination li a {
             margin-right: 1rem;
         }
+
         ul.pagination li.current a {
             font-weight: bold;
             background-color: #18A090 !important;
             border-radius: 3rem;
             padding: 0.3rem 0.8rem;
             color: #fff;
+        }
+
+        .counter {
+            background-color: #efefef;
+            padding: 0.1rem 0.5rem;
+            border-radius: 3px;
+        }
+
+        .metric {
+            font-size: 13pt;
+            font-weight: lighter;
+        }
+
+        .metric > td {
+            padding-top: 8px;
+            padding-bottom: 8px;
         }
     </style>
 
@@ -48,39 +70,82 @@
 {% block body_content %}
     <div class="body-form container">
         <div class="dashboard-title">
-            <h2>Site visits <span class="badge badge-info">{{ page_obj.paginator.count }}</span></h2>
-            <div class="dashboard-close" data-destination="/map"><i class="fa fa-times" aria-hidden="true"></i></div>
+            <h2>Site visits</h2>
+            <div class="dashboard-close" data-destination="/map"><i
+                    class="fa fa-times" aria-hidden="true"></i></div>
         </div>
 
-        <table class="table table-striped">
-            <thead>
-            <tr>
-                <th scope="col">Site code/name</th>
-                <th scope="col">Collection date</th>
-                <th scope="col">Owner</th>
-                <th scope="col">Collector</th>
-                <th scope="col">Total occurrences</th>
-                <th scope="col">Actions</th>
-            </tr>
-            </thead>
-            <tbody>
-                {% for site_visit in survey_list %}
+        <div class="row">
+            <div class="col-2">
+                <h5>Metrics</h5>
+                <div style="border-top: 1px solid rgba(0,0,0,0.28)">
+                    <table style="width: 100%">
+                        <tr class="metric">
+                            <td>Site visits</td>
+                            <td><span
+                                    class="counter">{{ page_obj.paginator.count }}</span>
+                            </td>
+                        </tr>
+                        <tr class="metric">
+                            <td>Sites</td>
+                            <td><span
+                                    class="counter">{{ total_sites }}</span>
+                            </td>
+                        </tr>
+                        <tr class="metric">
+                            <td>Records</td>
+                            <td><span
+                                    class="counter">{{ total_records }}</span>
+                            </td>
+                        </tr>
+                    </table>
+                </div>
+                <h5 style="margin-top: 20px;">Filters</h5>
+                <div style="border-top: 1px solid rgba(0,0,0,0.28)"
+                     class="filter-list">
+                    <div class="filter-title">Collector/Owner</div>
+                    <div class="filter-value">
+                        <input type="text" class="form-control form-control-sm"
+                               onClick="this.setSelectionRange(0, this.value.length)"
+                               id="owner" placeholder="" name="owner" value="{% if collector_owner %}{% if collector_owner.0.get_full_name %}{{ collector_owner.0.get_full_name }}{% else %}{{ collector_owner.0.username }}{% endif %}{% endif %}"
+                               required>
+                    </div>
+                </div>
+            </div>
+            <div class="col-10">
+                <table class="table table-striped">
+                    <thead>
                     <tr>
-                        <td>{{ site_visit.site.site_code }}</td>
-                        <td>{{ site_visit.date }}</td>
-                        <td>{{ site_visit.owner.get_full_name }}</td>
-                        <td>{{ site_visit.collector_user.get_full_name }}</td>
-                        <td>{{ site_visit.total }}</td>
-                        <td>
-                            <a href="/site-visit/detail/{{ site_visit.id }}/" class="btn btn-primary btn-sm">View</a>
-                             {% if user.is_superuser or site_visit.owner == user or site_visit.collector_user == user %}
-                                <a href="/site-visit/update/{{ site_visit.id }}/" class="btn btn-primary btn-sm">Edit</a>
-                            {% endif %}
-                        </td>
+                        <th scope="col">Site code/name</th>
+                        <th scope="col">Collection date</th>
+                        <th scope="col">Owner</th>
+                        <th scope="col">Collector</th>
+                        <th scope="col">Total occurrences</th>
+                        <th scope="col">Actions</th>
                     </tr>
-                {% endfor %}
-            </tbody>
-        </table>
+                    </thead>
+                    <tbody>
+                    {% for site_visit in survey_list %}
+                        <tr>
+                            <td>{{ site_visit.site.site_code }}</td>
+                            <td>{{ site_visit.date }}</td>
+                            <td>{{ site_visit.owner.get_full_name }}</td>
+                            <td>{{ site_visit.collector_user.get_full_name }}</td>
+                            <td>{{ site_visit.total }}</td>
+                            <td>
+                                <a href="/site-visit/detail/{{ site_visit.id }}/"
+                                   class="btn btn-primary btn-sm">View</a>
+                                {% if user.is_superuser or site_visit.owner == user or site_visit.collector_user == user %}
+                                    <a href="/site-visit/update/{{ site_visit.id }}/"
+                                       class="btn btn-primary btn-sm">Edit</a>
+                                {% endif %}
+                            </td>
+                        </tr>
+                    {% endfor %}
+                    </tbody>
+                </table>
+            </div>
+        </div>
 
         {% if is_paginated %}
             <div class="pagination-centered">
@@ -111,5 +176,82 @@
     <script src="{% static "js/libs/jquery/jquery-3.3.1.min.js" %}"></script>
     <script src="{% static "js/libs/jquery-ui-1.12.1/jquery-ui.min.js" %}"></script>
     <script src="{% static "js/libs/bootstrap-4.0.0/js/bootstrap.min.js" %}"></script>
-    <script src="{% static "js/non_requirejs/dashboard_buttons.js" %}"></script>
+    <script src="{% static "js/utils/filter_list.js" %}"></script>
+
+    <script>
+        function dashboardClose(e) {
+            let previousUrl = '/map'
+            let url = new URL(window.location.href);
+            let params = url.searchParams.toString();
+            if (params && url.searchParams.has('taxon')) {
+                previousUrl += '/#site-detail/';
+                previousUrl += params;
+                let regex = new RegExp("&page=\\d+|page=\\d+")
+                previousUrl = previousUrl.replace(regex, '');
+                window.location.href = previousUrl;
+                return true;
+            }
+            window.location.href = previousUrl;
+        }
+
+        $(function () {
+            $('.dashboard-close').click(dashboardClose);
+            renderFilterList($('.filter-list'), false);
+        });
+
+        $('#owner').autocomplete({
+            source: function (request, response) {
+                $.ajax({
+                    url: '/user-autocomplete/?term=' + encodeURIComponent(request.term),
+                    type: 'get',
+                    dataType: 'json',
+                    success: function (data) {
+                        response($.map(data, function (item) {
+                            return {
+                                label: item.first_name + ' ' + item.last_name,
+                                value: item.id
+                            }
+                        }));
+                    }
+                });
+            },
+            minLength: 3,
+            open: function (event, ui) {
+                setTimeout(function () {
+                    $('.ui-autocomplete').css('z-index', 99);
+                }, 0);
+            },
+            change: function (event, ui) {
+                let value = $(event.target).val();
+                if (value === '') {
+                    let regex = new RegExp("collectors=\\[\\d*\\]");
+                    let url = window.location.href;
+                    if (url.search(regex) >= 1) {
+                        url = url.replace(regex, `collectors=[]`);
+                    }
+                    window.location.href = url;
+                }
+            },
+            select: function (e, u) {
+                e.preventDefault();
+                let userId = u.item.value;
+                let regex = new RegExp("collectors=\\[\\d*\\]");
+                let url = window.location.href;
+                let pageRegex = new RegExp("&page=\\d+|page=\\d+")
+                url = url.replace(pageRegex,'');
+                if (url.search(regex) >= 1) {
+                    url = url.replace(regex, `collectors=[${userId}]`);
+                } else {
+                    if (url[url.length - 1] !== '/') {
+                        url += '&';
+                    } else {
+                        url += '?';
+                    }
+                    url += `collectors=[${userId}]`;
+                }
+                $('#owner').val(u.item.label);
+                window.location.href = url;
+            }
+        });
+    </script>
 {% endblock %}
