Add new taxon group form

--- a/bims/templates/taxa_uploader.html
+++ b/bims/templates/taxa_uploader.html
@@ -43,7 +43,7 @@
                     <div class="form-group row">
                         <label for="inputPassword"
                                class="col-sm-2 col-form-label"><b>Taxon Group</b></label>
-                        <div class="col-sm-10">
+                        <div class="col-sm-8">
                             <select class="form-control" name="taxon_group"
                                     id="taxon-group">
                                 {% for taxon_group in taxa_groups %}
@@ -51,8 +51,10 @@
                                 {% endfor %}
                             </select>
                         </div>
+                        <button type="button" class="btn btn-primary col-sm-2" data-toggle="modal" data-target="#taxonGroupModal">
+                            Add new
+                        </button>
                     </div>
-
                     <div class="help-block-space"></div>
                     <div class="form-group row">
                         <label class="col-sm-2 col-form-label" for="file"><b>Upload csv here</b></label>
@@ -63,6 +65,54 @@
                     <button class="btn btn-primary" type="submit">Upload</button>
                     {% endif %}
                 </div>
+
+                <!-- Modal -->
+                <div class="modal fade" id="taxonGroupModal" tabindex="-1"
+                     role="dialog" aria-labelledby="exampleModalLabel"
+                     aria-hidden="true" style="margin-top: 100px;">
+                    <div class="modal-dialog" role="document">
+                        <div class="modal-content">
+                            <div class="modal-header">
+                                <h5 class="modal-title" id="exampleModalLabel">
+                                    Add new taxon group</h5>
+                                <button type="button" class="close"
+                                        data-dismiss="modal"
+                                        aria-label="Close">
+                                    <span aria-hidden="true">&times;</span>
+                                </button>
+                            </div>
+                            <div class="modal-body" style="padding: 20px;">
+                                <div class="form-group row">
+                                    <label for="inputName"
+                                           class="col-sm-2 col-form-label">Name</label>
+                                    <div class="col-sm-10">
+                                        <input type="text" class="form-control"
+                                               id="inputName"
+                                               placeholder="Taxon group name" name="taxon_group_name">
+                                    </div>
+                                </div>
+                                <div class="form-group row">
+                                    <label for="inputLogo"
+                                           class="col-sm-2 col-form-label">Logo</label>
+                                    <div class="col-sm-10">
+                                        <input type="file" class="form-control"
+                                               id="inputLogo" name="taxon_group_logo">
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="modal-footer">
+                                <button type="button" class="btn btn-secondary"
+                                        data-dismiss="modal">Close
+                                </button>
+                                <button type="submit" class="btn btn-primary">
+                                    Add
+                                </button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+
             </form>
 
             {# Upload sessions #}
@@ -110,6 +160,7 @@
             </div>
         </div>
     </div>
+
 
 {% endblock %}
 
