--- a/bims/templates/taxa_uploader.html
+++ b/bims/templates/taxa_uploader.html
@@ -29,8 +29,8 @@
                     <div class="help-block-space"></div>
                     <strong>You can download the template here :</strong>
                     {% block download_example_button %}
-                    <a href="{% static "data/data_example.csv" %}"
-                       download="data_example.csv">Download Template</a>
+                    <a href="{% static "data/taxa_sample.csv" %}"
+                       download="taxa_sample.csv">Download Template</a>
                     {% endblock %}
 
                     {% if not upload_sessions %}
