--- a/bims/templates/navigation_bar.html
+++ b/bims/templates/navigation_bar.html
@@ -26,6 +26,7 @@
                             <a class="dropdown-item" id="navbar-biblio" href="/sass/list/">SASS</a>
                         {% endif %}
                         <a class="dropdown-item" id="navbar-geonode" href="/wagtail-pages/">WAGTAIL PAGES</a>
+                        <a class="dropdown-item" id="navbar-geonode" href="/upload-taxa/">UPLOAD TAXA</a>
                          {% if user.is_authenticated %}
                              <div class="dropdown-divider"></div>
                             <a class="dropdown-item" id="navbar-geonode" href="/layers">GIS CATALOGUE</a>
